feat: add mongodb persistence layer + Implemented MongoDB integration for data persistence.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
     "lib0": "^0.2.103",
+    "mongodb": "^6.3.0",
     "nodemon": "^3.1.11",
     "ws": "^8.18.3",
     "y-protocols": "^1.0.6",
