--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "cors": "^2.8.6",
     "dotenv": "^16.3.1",
+    "express": "^5.2.1",
     "lib0": "^0.2.103",
     "mongodb": "^6.3.0",
     "nodemon": "^3.1.11",
+    "uploadthing": "^7.7.4",
     "ws": "^8.18.3",
     "y-protocols": "^1.0.6",
     "yjs": "^13.6.27"
